<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_done">Done</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_organization">Organization</string>
    <string name="title_profiles">Profiles</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="project_name">Project Name</string>
    <string name="project_date">Project Date</string>
    <string name="spinner_owner">Owner</string>
    <string name="spinner_start_date">Start Date</string>
    <string name="spinner_end_date">End Date</string>
    <string name="text_owner">Owner</string>
    <string name="text_prevtask">Previous Task</string>
    <string name="nexttask">Next Task</string>
    <string name="person_name">Name</string>
    <string name="person_email">Email</string>
    <string name="person_Number">Phone Number</string>
    <string name="text_department">Department</string>
    <string name="text_team">Team</string>
    <string name="spinner_start_date2">Actual Start Date</string>
    <string name="spinner_end_date2">Actual End Date</string>
    <string name="status">Status</string>
    <string name="project_comment">Comment</string>
    <string name="percentage">%</string>
    <string name="completion">Completion</string>
</resources>
